<resources>
    <string name="app_name">Cookner</string>
    <string name="ingredient_tab_name">Ingredients</string>
    <string name="step_tab_name">Steps</string>

    <string name="image_pager_shared_name">photo_header</string>

    <string name="mockup_recipe_name">Test</string>
    <string name="add_ingredient">Add ingredient</string>

    <string name="ingredient_name">Name</string>
    <string name="ingredient_quantity">Quantity</string>
    <string name="ingredient_measure">Measure</string>
    <string name="action_add">ADD</string>
    <string name="add_step">Add new step</string>
    <string name="step_description">Step description</string>
    <string name="step_form_header">Add new step</string>
    <string name="action_finish">FINISH</string>
    <string name="delete">Delete</string>
    <string name="edit">EDIT</string>
    <string name="add_photo">Add photo</string>

    <string name="title_activity_cooking_view">CookingViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="ingredient_form_header">Add new ingredient</string>
    <string name="ingreadient_measure_input_hint">Measure (e.g. Kg)</string>
    <string name="ingredient_quantity_input_hint">Quantity</string>
    <string name="ingredient_name_input_hint">Name</string>
</resources>
